src/app/components/main/brokerage/brokerage.scss
.headerProgress {
	background-color: #f2f8f8;
	border: 3px solid #e8f8f8;
	padding: 30px;
	ol {
		list-style: decimal;
		padding-top: 30px;
		padding-left: 30px;
		line-height:21px;
	}
	li.active {
		color: #3aafa6;
	}
}
.titleProgressHeader{
	font-weight:bold;
}
.mainArea {
	height: 100%;
}
footer {
  background-color: #f2f8f8;
  height:90px;
  width:100%;
}
.md-raised.md-success {
	color: #ffffff;
	font-family: Lato;
	margin-left: 0px;
	margin-right: 0px;
	border-radius: 1px;
	background: #3bada5;
}
.md-raised.md-blue {
	color: #ffffff;
	font-family: Lato;
	margin-left: 10px;
	margin-right: 0px;
	border-radius: 1px;
	background: #3498db;
}
.md-raised.md-back {
	color: white;
	margin-right:0px;
	border-radius: 1px;
	font-family: Lato;
	background: #4f6379;
}
.md-raised.md-edit-form {
	color: #9da9b5;
	margin-right: 0px;
	border-radius: 1px;
	font-family: Lato;
	margin-left: 0px;
	background: #ecf0f1;
	padding-left: 20px;
    padding-right: 20px;
	&:hover {
		color: #9da9b5;
		background: #ecf0f1;
	}
}
.md-raised.md-back:not([disabled]):hover {
	color: white;
	background: #4f6379;
}
.md-raised.md-success:not([disabled]):hover {
    background-color: #3bada5;
}
.md-raised.md-blue:not([disabled]):hover {
    background-color: #3498db;
}

.md-stepper-indicator .md-stepper-number, .md-stepper-indicator.md-completed .md-stepper-number {
	background-color: #fff;
	width: 40px;
    height: 40px;
    border-radius: 40px;
    line-height: 40px;
    color: #a2a9b1;
    border: solid 2px #e4e9ee;
}
.md-stepper-indicator.md-active .md-stepper-number, .md-stepper-indicator.md-completed .md-stepper-number {
	background-color: #f39c11;
	color: #fff;
}
.md-stepper-number.md-activ {
	background-color: #f39c11;
}
.md-stepper-number {
	color: #e2eaec;
	background-color: #ffffff;
	border: 2px solid #e2eaec;
}
md-stepper {
	width: 100%;
	flex: 1;
}
.md-steppers-header {
    box-shadow: none;
}
.md-steppers:not(.md-steppers-linear) .md-stepper-indicator.md-editable.md-completed:hover, .md-steppers:not(.md-steppers-linear) .md-stepper-indicator.md-editable.md-completed:hover .md-stepper-indicator-wrapper, .md-steppers:not(.md-steppers-linear) .md-stepper-indicator:not(.md-active):not(.md-completed):hover, .md-steppers:not(.md-steppers-linear) .md-stepper-indicator:not(.md-active):not(.md-completed):hover .md-stepper-indicator-wrapper {
    background-color: #fbfbfb;
}
md-event-calendar {
	margin:30px;	
}

.inputdemoErrors .inputErrorsApp {
  min-height: 48px; }

.inputdemoErrors md-input-container > p {
  font-size: 0.8em;
  text-align: left;
  width: 100%; }

.col {
	margin: 5px 20px 10px 20px;
}

.footerBtns {
	margin: 15px;
}

md-input-container.md-block {
	margin-top: 0px;
}

.detailsForm {
	margin-top:45px;
}

.partnersHeader {
	font-family: Lato;
	font-size: 16px;
	font-weight: 700;
	color: #4f6379;
	text-align: center;
	margin-top: 40px;
	width: 100%;
}

md-event-calendar .md-event-calendar-cell-event.book-appointment {
	background-color: #3aafa5;
	color: white;
}

.partnerBox {
	width: 200px;
	height: 100px;
	object-fit: contain;
	border-radius: 5px;
	background-color: #ffffff;
	background-color: var(--white);
	border: solid 1px #e7ecf1;
	border: solid 1px var(--pale-grey);
}

.partnerSelected {
	border-radius: 5px;
	border: solid 1px #3aafa5;
	border: solid 1px var(--greeny-blue);
}

.partnerLogo {
  width: 200px;
  height: 100px;
  object-fit: contain;
  border-radius: 5px;
  background-color: #ffffff;
  border: solid 1px #e7ecf1;
  margin: 20px;
  position: relative;
  -webkit-transition : border 400ms ease-out;
  -moz-transition : border 400ms ease-out;
  -o-transition : border 400ms ease-out;
  transition : border 400ms ease-out;

  img {
  	height: 40px;
  	margin-top: 25px;
  }
  .premiereIcon {
	position: absolute;
    height: 20px;
    top: -25px;
    left: 15px;
  }
}
.partnerLogo:focus {
  	outline: none;
	border: 0;
	border: solid 1px #e7ecf1;
  	//border: solid 2px #3aafa5;
 }

 .partnerLogo.selected {
 	outline: none;
	border: 0;
  	border: solid 2px #3aafa5;
 }

.partnerLogo:hover {
   border : solid 2px #3aafa5; 
}

.contactedUsers {
	width: 250px;
	height: 996px;
	background-color: #f9fbfc;
}


.contactedUsersTitle {
  line-height: 19px;
  font-family: Lato;
  font-size: 16px;
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
  color: #4f6379;
  margin-top: 24px;
  margin-left: 15px;
  margin-right: 15px;
}

.searchBar {
    margin-top: 21px;
    height: 35px;
    width: 220px;
	margin-left: 14px;
	margin-right: 15px;
}

.appointment {
	outline: none;
    display: flex;
    padding: 15px;
    margin-top: 20px; 
    width: 100%;
    padding-top: 20px;
    padding-bottom: 20px;
    cursor: pointer;
    .detail {
        display: flex;
        flex-flow: column;
        margin-left: 10px;
    }
    .pending-btn {
        padding: 5px 18px;
        text-transform: uppercase;
        border: 1px solid #57c3ea;
        color: #57c3ea;
        border-radius: 3px;
        font-size: 12px;
        cursor: pointer;
    }
}
.appointment.active {
	background-image: linear-gradient(to bottom, #4a86a9, #15736b);
	color: #fff;
	.pending-btn {
		border-color: #fff;
		color: #fff;
	}
}

.validationReport {
	border: solid 1px #3498db;
	border-left: solid 7px #3498db;
	color: #4f6379;
	line-height: 20px;;
	font-weight: 600;
	margin: 15px;
    padding: 10px;
    margin-left: 25px;
    max-width: 700px;
    clear: both;
    overflow: hidden;

	.title {
		font-size: 16px;
	}
	.description {
		opacity: 0.6;
		font-family: Lato;
		font-size: 14px;
	}
	img {
		height: 35px;
	}
}

.accSummary {
	.title {
		font-size: 16px;
		font-weight: 500;
		color: #4f6379;
		line-height: 24px;
	}
	.documentTile {
		border: solid 1px #e7ecf1;
		overflow: hidden;
	    padding: 10px;
	    color: #4f6379;
	    font-size: 14px;
	    margin-top: 15px;
		img {
			height: 30px;
			opacity: 0.4;
			margin: 10px;
			margin-left: 20px;
		}
		.header {
			font-size: 16px;
			line-height: 20px;
		}
		.description {
			opacity: 0.4;
		}
	}
	.appointmentTile {
		border: solid 1px #e7ecf1;
		overflow: hidden;
	    padding: 10px;
	    color: #4f6379;
	    font-size: 14px;
	    margin-top: 15px;
		.actnItem {
			margin: 20px;
		}
		.header {
			font-size: 16px;
			line-height: 20px;
			margin-bottom: 15px;
		}
		.pending-btn {
			margin-top: 10px;
		}
	}
}

